# screen-translator

./: .gitignore  README.md  main.py  pyproject.toml
